# django-challenge

./: README.md  pyproject.toml
challenge/: asgi.py  settings.py  urls.py  wsgi.py
challenge/customers/: apps.py  models.py
challenge/customers/management/commands/: import_customers.py
challenge/customers/migrations/: 0001_initial.py
