[tool.poetry]
name = "django_coding_challenge"
version = "0.1.0"
description = ""
authors = ["Sébastien Diemer <sdiemer@mytraffic.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
